# opass

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  build.sh  opass.c  opass.h
.github/workflows/: ccpp.yml
src/: opass.c  opass.h  output.c  output.h
